# codeilus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NORTH_STAR.md  README.md  lefthook.yml  release-please-config.json
.github/workflows/: ci.yml  daily.yml  docs.yml  release.yml
crates/codeilus-analyze/: Cargo.toml
crates/codeilus-analyze/src/: circular_deps.rs  god_class.rs  lib.rs  long_method.rs  security.rs  test_gap.rs  types.rs
crates/codeilus-analyze/tests/: detectors.rs
crates/codeilus-api/: Cargo.toml
crates/codeilus-api/src/: error.rs  lib.rs  state.rs
crates/codeilus-api/src/routes/: annotations.rs  ask.rs  chapters.rs  files.rs  graph.rs  health.rs  learning.rs  mod.rs  narratives.rs  schematic.rs  search.rs  symbols.rs  ws.rs
crates/codeilus-api/tests/: api_routes.rs
crates/codeilus-app/: Cargo.toml
crates/codeilus-app/src/: main.rs
crates/codeilus-app/tests/: integration_test.rs
crates/codeilus-core/: Cargo.toml
crates/codeilus-core/src/: config.rs  error.rs  event_bus.rs  events.rs  ids.rs  lib.rs  types.rs
crates/codeilus-db/: Cargo.toml
crates/codeilus-db/src/: batch_writer.rs  lib.rs  migrations.rs  pool.rs
crates/codeilus-db/src/repos/: annotation_repo.rs  chapter_repo.rs  community_repo.rs  edge_repo.rs  edges.rs  file_metrics_repo.rs  file_repo.rs  files.rs  harvest_repo.rs  mod.rs  narrative_repo.rs  pattern_repo.rs  pipeline_repo.rs  process_repo.rs  progress_repo.rs  quiz_repo.rs  schematic_repo.rs  symbol_repo.rs  symbols.rs
crates/codeilus-db/tests/: clear_analysis.rs  persist_parsed.rs  repos.rs
crates/codeilus-diagram/: Cargo.toml
crates/codeilus-diagram/src/: architecture.rs  file_tree.rs  flowchart.rs  lib.rs  mermaid.rs  types.rs
crates/codeilus-export/: Cargo.toml
crates/codeilus-export/src/: data_loader.rs  index.rs  lib.rs  renderer.rs  template.rs  types.rs
crates/codeilus-export/tests/: export.rs
crates/codeilus-graph/: Cargo.toml
crates/codeilus-graph/src/: builder.rs  call_graph.rs  community.rs  dep_graph.rs  entry_points.rs  heritage.rs  lib.rs  process.rs  types.rs
crates/codeilus-graph/tests/: graph_tests.rs  property_tests.rs
crates/codeilus-harvest/: Cargo.toml
crates/codeilus-harvest/src/: cloner.rs  fingerprint.rs  lib.rs  scraper.rs  types.rs
crates/codeilus-harvest/tests/: harvest_tests.rs
crates/codeilus-harvest/tests/fixtures/: trending.html
crates/codeilus-learn/: Cargo.toml
crates/codeilus-learn/src/: curriculum.rs  lib.rs  progress.rs  quiz.rs  types.rs
crates/codeilus-learn/tests/: learn.rs
crates/codeilus-llm/: Cargo.toml
crates/codeilus-llm/src/: cli.rs  context.rs  lib.rs  provider.rs  stream_parser.rs  types.rs
crates/codeilus-mcp/: Cargo.toml
crates/codeilus-mcp/src/: lib.rs  server.rs  tools.rs  types.rs
crates/codeilus-metrics/: Cargo.toml
crates/codeilus-metrics/src/: complexity.rs  fan.rs  git.rs  heatmap.rs  lib.rs  modularity.rs  sloc.rs  tfidf.rs  types.rs
crates/codeilus-metrics/tests/: metrics_tests.rs
crates/codeilus-narrate/: Cargo.toml
crates/codeilus-narrate/src/: generator.rs  lib.rs  placeholders.rs  prompts.rs  types.rs
crates/codeilus-narrate/tests/: narrate.rs
crates/codeilus-parse/: Cargo.toml
crates/codeilus-parse/src/: extractor.rs  language.rs  lib.rs  model.rs  resolver.rs  walker.rs
crates/codeilus-parse/src/parser/: golang.rs  javalang.rs  javascript.rs  mod.rs  python.rs  rustlang.rs  typescript.rs
crates/codeilus-parse/src/queries/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
crates/codeilus-parse/tests/: basic_parsing.rs
crates/codeilus-parse/tests/fixtures/: sample.py  sample.rs  sample.ts
crates/codeilus-search/: Cargo.toml
crates/codeilus-search/src/: lib.rs
crates/codeilus-search/tests/: search_tests.rs
docs/: AGENT_PROMPTS.md  DEV_TRACKING.md  OPTIMIZATIONS.md  PARALLEL_AGENTS.md  SCHEMATIC_DESIGN.md  TESTING_GUIDE.md  WAVE7_AGENTS.md
docs/adr/: 0001-heuristic-vs-treesitter-parsers.md  0002-unified-schematic-explorer.md
docs/audit-2026-03-15/: 00-INDEX.md  01-DOCS-VS-CODEBASE-INCONSISTENCIES.md  02-FIX-PROPOSALS.md  03-SENIOR-ARCHITECTURE-REVIEW.md  04-UX-PRINCIPLES-ADOPTION.md
docs/user/: PERSONAS.md
export-template/: index.html
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/e2e/: full-audit.spec.ts  schematic.spec.ts
frontend/playwright-report/: index.html
frontend/src/: app.css  app.html
frontend/src/lib/: Markdown.svelte  api.ts  types.ts
frontend/src/lib/components/: Breadcrumbs.svelte  Card.svelte  CommandPalette.svelte  EmptyState.svelte  ErrorBanner.svelte  HelpTooltip.svelte  LoadingSpinner.svelte  OnboardingBanner.svelte  ProgressBar.svelte  SystemStatus.svelte  index.ts
frontend/src/lib/schematic/: SchematicCanvas.svelte  SchematicContextMenu.svelte  (+11 more)
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 0001_init.sql  0002_fts5.sql  0003_quiz_columns.sql  0004_annotations.sql  0005_progress_unique.sql  0006_seed_badges.sql  0007_narrative_placeholder.sql  0008_content_hash.sql  0009_pipeline_runs.sql  0010_add_indexes.sql
site/: mkdocs.yml  pyproject.toml
site/docs/: contributing.md  index.md
site/docs/architecture/: crate-map.md  data-flow.md  overview.md
site/docs/getting-started/: configuration.md  installation.md  quickstart.md
site/docs/guide/: ask-ai.md  graph-explorer.md  how-it-works.md  learning-path.md  schematic-explorer.md  static-export.md
site/docs/reference/: api.md  cli.md  mcp.md
sprints/: sprint-0.md  sprint-1.md
stat-qou-plan/: 01-STATUS-QUO.md  02-INSPECTION.md  03-RESEARCH.md  04-VISION-MCP-AS-SERVICE.md  05-PLAN-NEXT.md  06-REAL-VS-STUB-AUDIT.md  07-PERPLEXITY-BRIEF.md  08-MAKE-IT-REAL-FIRST.md
tasks/: BOARD.md
tasks/wave1/: db-repos.md  frontend.md  parse.md
tasks/wave2/: api-routes.md  graph.md
tasks/wave3/: analyze.md  diagram.md  metrics.md
tasks/wave4/: learn.md  llm.md  narrate.md
tasks/wave5/: export.md  harvest.md
tasks/wave6/: mcp-wiring.md
tests/: E2E_REPORT.md
xtask/src/: main.rs
(+14 files in other folders)
