[package]
name = "codeilus-analyze"
version = "0.1.0"
edition = "2021"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-parse = { path = "../codeilus-parse" }
codeilus-graph = { path = "../codeilus-graph" }
codeilus-db = { path = "../codeilus-db" }
petgraph = "0.6"
regex = "1"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
