[package]
name = "codeilus-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codeilus"
path = "src/main.rs"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-db = { path = "../codeilus-db" }
codeilus-api = { path = "../codeilus-api" }
codeilus-parse = { path = "../codeilus-parse" }
codeilus-graph = { path = "../codeilus-graph" }
codeilus-metrics = { path = "../codeilus-metrics" }
codeilus-analyze = { path = "../codeilus-analyze" }
codeilus-diagram = { path = "../codeilus-diagram" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
