[package]
name = "codeilus-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codeilus"
path = "src/main.rs"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-db = { path = "../codeilus-db" }
codeilus-api = { path = "../codeilus-api" }
codeilus-parse = { path = "../codeilus-parse" }
codeilus-graph = { path = "../codeilus-graph" }
codeilus-metrics = { path = "../codeilus-metrics" }
codeilus-analyze = { path = "../codeilus-analyze" }
codeilus-diagram = { path = "../codeilus-diagram" }
codeilus-llm = { path = "../codeilus-llm" }
codeilus-narrate = { path = "../codeilus-narrate" }
codeilus-learn = { path = "../codeilus-learn" }
codeilus-harvest = { path = "../codeilus-harvest" }
codeilus-export = { path = "../codeilus-export" }
codeilus-mcp = { path = "../codeilus-mcp" }
chrono = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
