[package]
name = "codeilus-db"
version = "0.1.0"
edition = "2021"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-parse = { path = "../codeilus-parse" }
rusqlite = { workspace = true }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
