[package]
name = "codeilus-graph"
version = "0.1.0"
edition = "2021"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-parse = { path = "../codeilus-parse" }
codeilus-db = { path = "../codeilus-db" }
petgraph = "0.6"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
