[package]
name = "codeilus-harvest"
version = "0.1.0"
edition = "2021"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-db = { path = "../codeilus-db" }
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.21"
tokio = { workspace = true, features = ["process", "sync"] }
git2 = "0.19"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
