[package]
name = "codeilus-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-graph = { path = "../codeilus-graph" }
async-trait = "0.1"
tokio = { workspace = true }
tokio-stream = "0.1"
futures = "0.3"
petgraph = "0.6"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
