[package]
name = "codeilus-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-parse = { path = "../codeilus-parse" }
codeilus-graph = { path = "../codeilus-graph" }
codeilus-db = { path = "../codeilus-db" }
git2 = "0.19"
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
