[package]
name = "codeilus-narrate"
version = "0.1.0"
edition = "2021"

[dependencies]
codeilus-core = { path = "../codeilus-core" }
codeilus-db = { path = "../codeilus-db" }
codeilus-graph = { path = "../codeilus-graph" }
codeilus-llm = { path = "../codeilus-llm" }
codeilus-parse = { path = "../codeilus-parse" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
petgraph = "0.6"
